tests/ui/inference/need_type_info/do-not-suggest-generic-arguments-for-turbofish.stderr
error[E0282]: type annotations needed
  --> $DIR/do-not-suggest-generic-arguments-for-turbofish.rs:8:5
   |
LL |     OhNo::C::<u32, _>;
   |     ^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `U` declared on the enum `OhNo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
